--- a/CSS/style.css
+++ b/CSS/style.css
@@ -309,7 +309,7 @@ button:active {
 
 /* details popup window */
 
-article {
+article {  
   width: 100%;
   max-height: 100%;
   background-color: #c1c7d0;  
@@ -320,7 +320,8 @@ article {
   padding: 20px 16px 26px;
   border: 1px solid #d0d9d4; 
 }
-.card-popup {
+
+.card-popup {  
   display: none;
   position: relative;
   width: 100%;
@@ -331,6 +332,10 @@ article {
   border-radius: 16px;
   background-color: #fff;
   /* overflow: auto; */
+}
+
+.card-popup.active {
+  display: block;
 }
 
 .card-popup .project-img {
