--- a/CSS/style.css
+++ b/CSS/style.css
@@ -195,14 +195,14 @@ ul {
   transition: all 0.4s ease-in-out;
 }
 
-.card img:hover {
-  opacity: 0.9;
-}
-
 .social-media-icons li a img {
   padding: 0 12px;
   margin: 5px 0;
   transition: all 0.3s ease-in-out;
+}
+
+.card img:hover {
+  opacity: 0.9;
 }
 
 .social-media-icons li a img:hover {
@@ -323,9 +323,11 @@ article {
   width: 100%;
   height: 100%;
   max-height: 100%;
-  background-color: #c1c7d0bd;
+  background-color: #c1c7d0d0;
+  backdrop-filter: blur(5px);
   border: 1px solid #d0d9d4;
   padding: 20px 16px;
+
   /* transform: scale(0);
   transition: 600ms ease-in-out; */
 }
@@ -333,15 +335,16 @@ article {
 .card-popup {
   display: none;
   position: relative;
+  background-attachment: scroll;
   width: 100%;
   max-height: 100%;
   padding: 0;
   margin: 0;
   z-index: 4;
   border-radius: 16px;
-  background-color: #fff;  
   transform: scale(0);
   transition: 600ms ease-in-out;
+  background-color: #fff;
 }
 
 .card-popup.active {
@@ -360,6 +363,7 @@ article {
 .card-popup .card-img {
   position: relative;
   max-width: 100%;
+  border-radius: 8px;
 }
 
 .card-popup .card-img:hover {
@@ -410,6 +414,18 @@ article {
   background: var(--background);
 }
 
+.cards .languages li {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  padding: 12px;
+  margin: 4px;
+  color: var(--secondary);
+  background: #fff;
+  border-radius: 8px;
+}
+
 .card-popup .program-lang li:nth-child(4) {
   display: none;
 }
@@ -436,6 +452,28 @@ article {
   transition: all 0.4s ease 0.2s;
 }
 
+.contact-form-section button {
+  margin-top: 7px;
+  transition: all 0.4s ease 0.2s;
+}
+
+.about button,
+.contact-form-section button {
+  height: 48px;
+  width: 159px;
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 500;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--secondary-btn);
+  letter-spacing: 0.03em;
+  padding: 12px;
+  margin-bottom: 10px;
+  transition: all 0.4s ease 0.2s;
+}
+
 .card-popup button:first-child {
   margin-right: 12px;
 }
@@ -453,32 +491,6 @@ article {
 .card-popup button:active {
   background-color: #008552;
 }
-
-
-
-/* Modal Content */
-/* .modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-The Close Button
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-} */
 
 .about-section {
   background: url("../images/illustration\ 2-about\ me\ mobile@2x.png") left 21% no-repeat, url("../images/illustration\ 1-\ about\ me-mobile@2x.png")  right 2%  no-repeat;
@@ -506,28 +518,6 @@ The Close Button
   font-weight: 400;
   color: #42526e;
   padding-bottom: 24px;
-}
-
-.contact-form-section button {
-  margin-top: 7px;
-  transition: all 0.4s ease 0.2s;
-}
-
-.about button,
-.contact-form-section button {
-  height: 48px;
-  width: 159px;
-  font-size: 17px;
-  line-height: 24px;
-  font-weight: 500;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  background-color: var(--secondary-btn);
-  letter-spacing: 0.03em;
-  padding: 12px;
-  margin-bottom: 10px;
-  transition: all 0.4s ease 0.2s;
 }
 
 .about button:active {
@@ -573,18 +563,6 @@ The Close Button
   letter-spacing: 0.4px;
   color: #344563;
   margin-bottom: 24px;
-}
-
-.cards .languages li {
-  font-size: 12px;
-  font-weight: 600;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  padding: 12px;
-  margin: 4px;
-  color: var(--secondary);
-  background: #fff;
-  border-radius: 8px;
 }
 
 section.contact-form-section {
@@ -792,7 +770,7 @@ footer::after {
   }
 
   .card-popup {
-    width: 65%;
+    width: 75%;
   }
 
   .about p {
@@ -849,17 +827,60 @@ footer::after {
     width: 369px;
     max-height: 474px;
   }
+
+  .card-popup {
+    /* width: 70%; */
+    max-width: 920px;
+  }
+
+  .card-popup .project-img {
+    margin-top: 48px;
+  }
+
+  /* .card-popup .card-img {
+    position: relative;
+    max-width: 100%;
+  } */
+
+  .card-popup .hide-icon {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+  }
+
   .card-popup .article {
     width: 100%;
+    padding-bottom: 44px;
     position: relative;
+  }
+
+  .card-popup h3 {
+    width: 60%;
   }
 
   .card-popup .article .btns-popup {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 16px;
   }
-  
+
+  .card-popup button {
+    margin: 0;
+    padding: 8px 10px;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 600;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    background-color: var(--secondary-btn);
+    transition: all 0.4s ease 0.2s;
+  }
+
+  .card-popup button:first-child {
+    margin-right: 6px;
+  }
+
   .about-section {
     background-image: none;
     background-image:
