--- a/CSS/style.css
+++ b/CSS/style.css
@@ -611,6 +611,19 @@ textarea:hover::placeholder {
   transform: translateX(5px);
 }
 
+.btn-submit-alert {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+form .alert {
+  visibility: hidden;
+  color: #fff;
+  background-color: #e74c3c;
+  padding: 12px;
+}
+
 .footer-icons {
   width: 100%;
   padding: 46px 0 19px;
