--- a/CSS/style.css
+++ b/CSS/style.css
@@ -419,6 +419,7 @@ article {
 .card-popup .project-img {
   width: 100%;
   height: auto;
+  min-height: 352px;
   padding: 16px;
   text-align: center;
 }
@@ -426,6 +427,8 @@ article {
 .card-popup .card-img {
   position: relative;
   max-width: 100%;
+  height: 100%;
+  min-height: 352px;
   border-radius: 8px;
 }
 
